--- a/UltrasonicSensorTesting/notebook/UltraSonicSensorAnalysis.ipynb
+++ b/UltrasonicSensorTesting/notebook/UltraSonicSensorAnalysis.ipynb
@@ -7,7 +7,7 @@
     "###  UltraSonicSensorAnalysis Jupyter notebook\n",
     "\n",
     "\n",
-    "#### Our goal is to predict the reflected (Echo) signal from the other transducer parameters. "
+    "#### Our goal is to predict the reflected (Echo) signal using other, more readily available, transducer parameters. "
    ]
   },
   {
