--- a/UltrasonicSensorTesting/notebook/UltraSonicSensorAnalysis.ipynb
+++ b/UltrasonicSensorTesting/notebook/UltraSonicSensorAnalysis.ipynb
@@ -7,7 +7,9 @@
     "###  UltraSonicSensorAnalysis Jupyter notebook\n",
     "\n",
     "\n",
-    "#### Our goal is to predict the reflected (Echo) signal using other, more readily available, transducer parameters. "
+    "#### Our goal is to predict the reflected (Echo) signal using other, more readily available, transducer parameters. ",
+    "\n",
+    "#### We will use Frequency, Ring-down, and Excitation voltage to predict Echo signal amplitude. "
    ]
   },
   {
